# fact-check-chat-bot

./: LICENSE  README.md  SYSTEM_archtiture.txt  app.py  pyproject.toml  requirements.txt
Self_agent_rag/: query_re_write.py  router.py  router_agent.py  verification_agent.py
document_loader/: load.py  semantic.py
vector_store/: hybrid_bm_faiss.py
