[project]
name = "autonomus-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-experimental>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "langsmith>=0.8.15",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pytest>=9.1.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "transformers>=5.12.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
